# CS1010301-Chess-Project

./: .gitignore  CMakeLists.txt  README.md
assets/: app.html  debug.html
assets/css/: cover.css  custom.css  draw.css  game.css  logo.css  menu.css  startup.css  style.css  timeout.css  win.css
assets/js/: api.js  custom.js  debug.js  game.js  script.js  sound.js
cmake/: Ultralight.cmake
include/core/: Board.hpp  Game.hpp  GameOverUtil.hpp  GameStateUtil.hpp  Move.hpp  MoveHandler.hpp  MoveHistory.hpp  Position.hpp  Spot.hpp  TGameOver.hpp  TGameState.hpp  Timer.hpp
include/core/piece/: Bishop.hpp  IPiece.hpp  King.hpp  Knight.hpp  Pawn.hpp  PieceUtil.hpp  Queen.hpp  Rook.hpp  TPiece.hpp
include/core/player/: Player.hpp  PlayerUtil.hpp  TPlayer.hpp
include/gui/: GUI.hpp  Inspector.hpp
src/: main.cpp
src/core/: Board.cpp  Game.cpp  MoveHandler.cpp
src/gui/: GUI.cpp  Inspector.cpp
